# TermAI

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.github/workflows/: release-branch.yml
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
tests/e2e/: home.spec.ts
