[package]
name = "termai"
version = "0.1.0"
description = "TermAI desktop shell built with Tauri 2"
authors = ["OpenAI"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "termai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

